--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,19 +22,18 @@
             android:padding="16dp"
             android:orientation="vertical"
             android:background="@color/white">
+
             <TextView
+                style="@style/textStyle.header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:text="@string/login_text"/>
             <EditText
                 android:id="@+id/et_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                style="@style/editTextStyle"
                 android:hint="@string/masukkan_username_text"
                 android:layout_marginTop="16dp" />
 
@@ -42,7 +41,7 @@
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                style="@style/editTextStyle.password"
                 android:hint="@string/masukkan_password_text"
                 android:layout_marginTop="16dp"/>
             <CheckBox
@@ -50,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/show_password_text"
+                style="@style/textStyle.cbStyle"
                 android:onClick="showHidePassword"/>
             <Button
                 android:id="@+id/btn_login"
