--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AplikasiLoginSederhana" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AplikasiLoginSederhana" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -20,6 +20,7 @@
         <item name="android:inputType">text</item>
         <item name="android:textColor">@color/purple_700</item>
         <item name="android:textColorHint">@color/purple_100</item>
+        <item name="android:textCursorDrawable">@color/purple_500</item>
     </style>
 
     <style name="editTextStyle.password">
